--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "ityped": "^1.0.3",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "sass": "^1.35.2",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7"
   }
